# sdbustest

./: CMakeLists.txt  README.md
gdbus/: CMakeLists.txt
gdbus/src/: busclient.cpp
sdbus/: CMakeLists.txt
sdbus/src/: busclient.cpp
